package edu.hitsz.observer;

/**
 * @author hitsz
 */
public interface BombObserver {
    void update();
    boolean invalid();
}
